2023-07-24 | mkkim | BaseFragment 수정

--- a/presentation/src/main/res/layout/fragment_on_boarding_main.xml
+++ b/presentation/src/main/res/layout/fragment_on_boarding_main.xml
@@ -15,6 +15,7 @@
             android:layout_height="match_parent"/>
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_next"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_margin="12dp"
