2023-07-27 | mkkim | onBoarding 프로세스 3단계 -> 1단계로 변경

--- a/presentation/src/main/res/layout/fragment_on_boarding.xml
+++ b/presentation/src/main/res/layout/fragment_on_boarding.xml
@@ -7,7 +7,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".fragment.OnBoardingMainFragment">
+        tools:context=".fragment.OnBoardingFragment">
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewpager_onboarding"
