--- a/presentation/src/main/res/layout/fragment_on_boarding.xml
+++ b/presentation/src/main/res/layout/fragment_on_boarding.xml
@@ -9,17 +9,12 @@
         android:layout_height="match_parent"
         tools:context=".fragment.OnBoardingFragment">
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewpager_onboarding"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_next"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_margin="12dp"
-            android:text="@string/str_next"
+            android:text="@string/str_start"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
