--- a/presentation/src/main/res/layout/fragment_history.xml
+++ b/presentation/src/main/res/layout/fragment_history.xml
@@ -10,8 +10,25 @@
         tools:context=".fragment.HistoryFragment">
 
         <TextView
+            android:id="@+id/text_history_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="최근 기록"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:layout_margin="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview_history"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_history_title"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
